--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -15,8 +15,8 @@
         <Columns>
             <HierarchyColumn T="League" />
             <PropertyColumn Property="e => e.Name" />
-            <PropertyColumn Property="e => e.RaceLength" Title="Length (Km)" />
-            <TemplateColumn Sortable="false" CellClass="d-flex justify-end">
+            <PropertyColumn Property="e => e.RaceLength" Title="Length (Km)" Style="font-family: var(--mud-typography-caption-family)" />
+            <TemplateColumn Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup Size="Size.Small">
                         <MudIconButton Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateLeague(context.Item))" />
