--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -35,11 +35,11 @@ else
                         <MudTd Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))">
                             @if (context.Grid > Model.MaximumInRace)
                             {
-                                <MudText>DNQ</MudText>
+                                <MudText Typo="Typo.caption">DNQ</MudText>
                             }
                             else
                             {
-                                <MudText>@context.Grid</MudText>
+                                <MudText Typo="Typo.caption">@context.Grid</MudText>
                             }
                         </MudTd>
                         <MudTd>@context.FullName</MudTd>
