--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -21,16 +21,16 @@
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e.Length" Title="Length (Km)" />
-            <TemplateColumn T="Track" Title="Aero">
+            <TemplateColumn T="Track" Title="Aero" Style="font-family: var(--mud-typography-caption-family)">
                 <CellTemplate>@(context.Item.AeroMod)x</CellTemplate>
             </TemplateColumn>
-            <TemplateColumn T="Track" Title="Chassis">
+            <TemplateColumn T="Track" Title="Chassis" Style="font-family: var(--mud-typography-caption-family)">
                 <CellTemplate>@(context.Item.ChassisMod)x</CellTemplate>
             </TemplateColumn>
-            <TemplateColumn T="Track" Title="Powertrain">
+            <TemplateColumn T="Track" Title="Powertrain" Style="font-family: var(--mud-typography-caption-family)">
                 <CellTemplate>@(context.Item.PowerMod)x</CellTemplate>
             </TemplateColumn>
-            <TemplateColumn T="Track" Title="Qualifying">
+            <TemplateColumn T="Track" Title="Qualifying" Style="font-family: var(--mud-typography-caption-family)">
                 <CellTemplate>@(context.Item.QualifyingMod)x</CellTemplate>
             </TemplateColumn>
             <TemplateColumn T="Track">
