--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -18,7 +18,7 @@
             <PropertyColumn Property="e => e.Type" />
             <PropertyColumn Property="e => e.ForWetConditions" Title="Only when wet" />
             <PropertyColumn Property="e => e.State" />
-            <TemplateColumn Sortable="false" CellClass="d-flex justify-end">
+            <TemplateColumn Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
                         <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTrait(context.Item))" />
@@ -37,22 +37,22 @@
                     <MudGrid>
                         <MudItem xs="3">
                             <MudPaper Class="d-flex align-center justify-center mud-width-full py-8">
-                                <MudText>Qualifying pace: @(context.Item.QualifyingPace)</MudText>
+                                <MudText Typo="Typo.caption">Qualifying pace: @(context.Item.QualifyingPace)</MudText>
                             </MudPaper>
                         </MudItem>
                         <MudItem xs="3">
                             <MudPaper Class="d-flex align-center justify-center mud-width-full py-8">
-                                <MudText>Driver pace: @(context.Item.RacePace)</MudText>
+                                <MudText Typo="Typo.caption">Driver pace: @(context.Item.RacePace)</MudText>
                             </MudPaper>
                         </MudItem>
                         <MudItem xs="3">
                             <MudPaper Class="d-flex align-center justify-center mud-width-full py-8">
-                                <MudText>Driver reliability: @(context.Item.DriverReliability)</MudText>
+                                <MudText Typo="Typo.caption">Driver reliability: @(context.Item.DriverReliability)</MudText>
                             </MudPaper>
                         </MudItem>
                         <MudItem xs="3">
                             <MudPaper Class="d-flex align-center justify-center mud-width-full py-8">
-                                <MudText>Car reliability: @(context.Item.CarReliability)</MudText>
+                                    <MudText Typo="Typo.caption">Car reliability: @(context.Item.CarReliability)</MudText>
                             </MudPaper>
                         </MudItem>
                         <MudItem xs="3">
