--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -13,8 +13,8 @@ else
         <MudTable Items="@Model.PracticeDrivers.OrderBy(e => e.Position)" id="practice-table">
             <ToolBarContent>
                 <MudText Typo="Typo.h6">
-                    <CountryFlag Code="@Model.Country" />
                     @Model.Name - PRACTICE
+                    <CountryFlag Code="@Model.Country" />
                 </MudText>
 
                 <MudSpacer />
@@ -33,42 +33,51 @@ else
             </ToolBarContent>
             <HeaderContent>
                 <MudTh>#</MudTh>
-                <MudTh Class="number-col">No.</MudTh>
+                <MudTh Class="pa-0"></MudTh>
                 <MudTh>Driver</MudTh>
+                <MudTh Class="number-col">No.</MudTh>
                 <MudTh>Team</MudTh>
-                <MudTh>PWR</MudTh>
+                <MudTh Class="number-col">PWR</MudTh>
                 @for (int i = 1; i <= Model.AmountRuns; i++)
                 {
                     var j = i;
                     <MudTh Class="number-col">@j</MudTh>
                 }
-                <MudTh>Score</MudTh>
+                <MudTh Class="number-col">Score</MudTh>
                 <MudTh>Gap</MudTh>
             </HeaderContent>
             <RowTemplate>
                 <MudTd>
-                    <MudText>@context.Position</MudText>
+                    <MudText Typo="Typo.caption">@context.Position</MudText>
                 </MudTd>
-                <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
-                    <MudText>@context.Number</MudText>
+                <MudTd Class="pa-0">
+                    <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
                 </MudTd>
                 <MudTd>
-                    <MudText>@context.FullName</MudText>
+                    <MudStack Row="true" Spacing="1" Class="align-center">
+                        <MudText Typo="Typo.body1">@context.FirstName</MudText>
+                        <MudText Typo="Typo.button">@context.LastName</MudText>
+                        <MudSpacer />
+                        <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                    </MudStack>
+                </MudTd>
+                <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
+                    <MudText Typo="Typo.caption">@context.Number</MudText>
                 </MudTd>
                 <MudTd Style="@(ViewHelper.SetBorderLeftStyle(context.Colour))">
                     <MudText>@context.TeamName</MudText>
                 </MudTd>
                 <MudTd>
-                    <MudText>@context.Power</MudText>
+                    <MudText Typo="Typo.caption">@context.Power</MudText>
                 </MudTd>
                 @foreach (var runResult in context.RunValues)
                 {
                     <MudTd Class="number-col">
-                        <MudText>@runResult</MudText>
+                        <MudText Typo="Typo.caption">@runResult</MudText>
                     </MudTd>
                 }
-                <MudTd>
-                    <MudText>@context.MaxScore</MudText>
+                <MudTd Class="number-col">
+                    <MudText Typo="Typo.caption">@context.MaxScore</MudText>
                 </MudTd>
                 <MudTd>
                     <MudText>+@(context.TimedGap((highestScore - context.MaxScore), Model.GapMarge))</MudText>
