--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -96,11 +96,13 @@ else
                             @Model.Name - QUALIFYING Q2
                         </MudText>
                         <MudSpacer />
-                        @if (advancedQ2 != Model.AmountRuns)
-                        {
-                            <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ2">Advance</MudButton>
-                        }
-                        <ScreenshotButton TargetId="q2-result-table" />
+                        <MudButtonGroup Variant="Variant.Outlined">
+                            <ScreenshotButton TargetId="q2-result-table" />
+                            @if (advancedQ1 != Model.AmountRuns)
+                            {
+                                <MudButton OnClick="AdvanceQ2">Advance</MudButton>
+                            }
+                        </MudButtonGroup>
                     </ToolBarContent>
                     <HeaderContent>
                         <MudTh>#</MudTh>
@@ -166,16 +168,20 @@ else
                             <CountryFlag Code="@Model.Country" />
                             @Model.Name - QUALIFYING Q3
                         </MudText>
+
                         <MudSpacer />
-                        @if (advancedQ3 == Model.AmountRuns)
-                        {
-                            <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
-                        }
-                        else
-                        {
-                            <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ3">Advance</MudButton>
-                        }
-                        <ScreenshotButton TargetId="q3-result-table" />
+                        
+                        <MudButtonGroup Variant="Variant.Outlined">
+                            <ScreenshotButton TargetId="q3-result-table" />
+                            @if (advancedQ3 == Model.AmountRuns)
+                            {
+                                <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
+                            }
+                            else
+                            {
+                                <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ3">Advance</MudButton>
+                            }
+                        </MudButtonGroup>
                     </ToolBarContent>
                     <HeaderContent>
                         <MudTh>#</MudTh>
