Found a version which works!

--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -37,12 +37,8 @@ html, body {
     font-size: 18px;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, h6 {
     font-family: F1Regular;
-}
-
-h6 {
-    font-family: F1BoldAlt;
 }
 
 th {
